Fixed weird margin problem on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,7 @@ a {
 	background: rgba(100,100,100,0.6);
 	min-width: 1em;
 	max-width: 2em;
+	min-height: 1em;
 }
 
 .selectedMenuItem {
@@ -85,6 +86,7 @@ a {
 	cursor: default;
 	min-width: 1em;
 	max-width: 2em;
+	min-height: 1em;
 }
 /*-----MENU BAR-------*/
 
@@ -204,20 +206,28 @@ a {
 	width: 100%;
 	height: 100%;
 	background: #888;
-	overflow: hidden;
 }
 
-.skyGradient {
+.darkGradient {
 	position: absolute;
 	top: 0;
 	left:0;
     width: 100%;
     height: 100%;
-    padding: 10% 5% 0 5%;
 	background: -webkit-linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,0.9), rgba(0,0,0,0.8), rgba(0,0,0,0.7)); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(top, rgba(255,255,255,0.4), rgba(255,255,255,0.2), rgba(255,255,255,0.0)); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(top, rgba(255,255,255,0.4), rgba(255,255,255,0.2), rgba(255,255,255,0.0)); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(top, rgba(255,255,255,0.4), rgba(255,255,255,0.2), rgba(255,255,255,0.0)); /* Standard syntax (must be last) */
+	background: -o-linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,0.9), rgba(0,0,0,0.8), rgba(0,0,0,0.7)); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,0.9), rgba(0,0,0,0.8), rgba(0,0,0,0.7)); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,0.9), rgba(0,0,0,0.8), rgba(0,0,0,0.7)); /* Standard syntax (must be last) */
+	z-index: -1;
+}
+
+.paddedText {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 90%;
+	height: 90%;
+	margin: 5% 5% 0 5%;
 }
 /*--------MISC--------*/
 
